--- a/BluetoothNotify/Properties/AndroidManifest.xml
+++ b/BluetoothNotify/Properties/AndroidManifest.xml
@@ -7,5 +7,17 @@
 	<uses-permission android:name="android.permission.BLUETOOTH" />
 	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-	<application android:allowBackup="true" android:icon="@mipmap/icon" android:label="@string/app_name"></application>
+	<uses-permission android:name="android.permission.REBOOT" />
+	<application android:allowBackup="true" android:icon="@mipmap/icon" android:label="@string/app_name">
+		<receiver android:enabled="true" android:exported="true" android:name="com.tarabel.bluetoothnotify.IntentReceiver" android:permission="" >
+			<intent-filter>
+				<action android:name="android.intent.action.BOOT_COMPLETED"></action>
+				<action android:name="android.intent.action.QUICKBOOT_POWERON"></action>
+				<action android:name="android.bluetooth.device.action.ACL_CONNECTED"></action>
+				<action android:name="android.bluetooth.device.action.ACL_DISCONNECTED"></action>
+				<action android:name="android.bluetooth.device.action.ACL_DISCONNECT_REQUESTED"></action>
+			</intent-filter>
+		</receiver>
+	</application>
+
 </manifest>
